check in Google Collab

--- a/class-8/class-8-DiffusionModel.ipynb
+++ b/class-8/class-8-DiffusionModel.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nispoe/GWU-SEAS-8525/blob/main/class-8/class-8-DiffusionModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8,7 +18,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -71,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "_1IRe6df7lDS"
       },
@@ -94,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "4g5ZJXzV5DHC"
       },
@@ -112,11 +121,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cIas42ZS8-ez",
-        "outputId": "5218dda1-16c6-4390-a59f-0d3dd446db58"
+        "id": "cIas42ZS8-ez"
       },
       "outputs": [],
       "source": [
@@ -136,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "dqbcOIl35Adz"
       },
@@ -157,12 +162,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 168
-        },
-        "id": "3ZgUzrB57wNM",
-        "outputId": "ded67382-a892-41b2-c5bf-a9474719d437"
+        "id": "3ZgUzrB57wNM"
       },
       "outputs": [],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "KEY30wEm5gt8"
       },
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "giTDR0uK5mSV"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "1CfLkdyF-D-v"
       },
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "7mJHK5wq-HmB"
       },
@@ -252,12 +252,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "id": "9nW8PaB9-LqT",
-        "outputId": "2ed8d1ae-40f0-498b-b071-5dc6ef5984d2"
+        "id": "9nW8PaB9-LqT"
       },
       "outputs": [],
       "source": [
@@ -284,12 +279,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "id": "h5cLm-9u-PE9",
-        "outputId": "2d18b897-8973-4209-b27b-bfaead146bd4"
+        "id": "h5cLm-9u-PE9"
       },
       "outputs": [],
       "source": [
@@ -314,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "c8mV7er3-Uaj"
       },
@@ -340,12 +330,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 319
-        },
-        "id": "Ag_8h3uC-ZBb",
-        "outputId": "8a61a30a-1694-4600-91f8-4d8bba61a22f"
+        "id": "Ag_8h3uC-ZBb"
       },
       "outputs": [],
       "source": [
@@ -367,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "yrxgkQpw-cWO"
       },
@@ -417,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "Yey2mA0k-lGT"
       },
@@ -456,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "dnczCApI-m7Z"
       },
@@ -577,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "lZVL8sNq-vca"
       },
@@ -589,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "Na5LGZk6-xjC"
       },
@@ -602,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "ReCSUpm--1Su"
       },
@@ -629,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "5kCmqnJC_v_z"
       },
@@ -640,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "NqZIsWJm_ydH"
       },
@@ -653,12 +638,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "iIfFA0XF-8je",
-        "outputId": "8a332a47-4f79-4e67-e499-2bac1b0b7795"
+        "id": "iIfFA0XF-8je"
       },
       "outputs": [],
       "source": [
@@ -705,12 +685,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 168
-        },
-        "id": "T3IfbMHP--oB",
-        "outputId": "549ede1c-b01d-4bb9-ba3e-c306f09b63de"
+        "id": "T3IfbMHP--oB"
       },
       "outputs": [],
       "source": [
@@ -723,12 +698,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "06pzyAr6_C0E",
-        "outputId": "03e7bdda-6899-4659-c786-763388b60a0f"
+        "id": "06pzyAr6_C0E"
       },
       "outputs": [],
       "source": [
@@ -746,12 +716,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 712
-        },
-        "id": "bv-V4G_X6TO4",
-        "outputId": "b262ea18-b91f-46d7-a8f5-66a3b78c0f58"
+        "id": "bv-V4G_X6TO4"
       },
       "outputs": [],
       "source": [
@@ -783,11 +748,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iTyVyvVuK7fl",
-        "outputId": "15eb8b38-9ccf-474d-dbf4-16b420bfc49f"
+        "id": "iTyVyvVuK7fl"
       },
       "outputs": [],
       "source": [
@@ -799,11 +760,10 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "authorship_tag": "ABX9TyMyjxCrTpj7PoO7b6rbfWMu",
       "gpuType": "A100",
-      "include_colab_link": true,
       "machine_shape": "hm",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
