--- a/class-7/class-7-DiffusionModel.ipynb
+++ b/class-7/class-7-DiffusionModel.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/nispoe/GWU-SEAS-8525/blob/main/class-7/class-7-DiffusionModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "I_gvC5rx43Ws"
       },
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "zPSyZOH6CYGE"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "_1IRe6df7lDS"
       },
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "dqbcOIl35Adz"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "KEY30wEm5gt8"
       },
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "giTDR0uK5mSV"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "1CfLkdyF-D-v"
       },
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "7mJHK5wq-HmB"
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "c8mV7er3-Uaj"
       },
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "yrxgkQpw-cWO"
       },
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Yey2mA0k-lGT"
       },
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "dnczCApI-m7Z"
       },
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "lZVL8sNq-vca"
       },
@@ -574,20 +574,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "Na5LGZk6-xjC"
       },
       "outputs": [],
       "source": [
         "if LOAD_MODEL:\n",
-        "    ddm.built = True\n",
+        "    # ddm.built = True\n",
+        "    dummy_input = tf.zeros((1, 28, 28, 1))\n",
+        "    ddm(dummy_input)\n",
         "    ddm.load_weights(\"/content/checkpoint/checkpoint.ckpt\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "ReCSUpm--1Su"
       },
@@ -614,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "5kCmqnJC_v_z"
       },
@@ -625,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "NqZIsWJm_ydH"
       },
@@ -669,6 +671,8 @@
         "\n",
         "\n",
         "image_generator_callback = ImageGenerator(num_img=10)\n",
+        "\n",
+        "ddm.build(input_shape=(None, 28, 28, 1))  # Change shape to match your data\n",
         "\n",
         "ddm.fit(\n",
         "    train,\n",
@@ -722,13 +726,11 @@
       "source": [
         "# Interpolation between two points in the latent space\n",
         "\n",
-        "\n",
         "def spherical_interpolation(a, b, t):\n",
         "    # Cast t to tf.float32 to match the expected type of a and b\n",
         "    t = tf.cast(t, tf.float32)\n",
         "    # Use tf.math functions to ensure operations remain in TensorFlow\n",
         "    return tf.math.sin(t * math.pi / 2) * a + tf.math.cos(t * math.pi / 2) * b\n",
-        "\n",
         "\n",
         "for i in range(5):\n",
         "    a = tf.random.normal(shape=(IMAGE_SIZE, IMAGE_SIZE, 3), dtype=tf.float32) # Explicitly set dtype to tf.float32\n",
@@ -743,27 +745,14 @@
         "    ).numpy()\n",
         "    display(generated_images, n=11)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iTyVyvVuK7fl"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
-      "include_colab_link": true,
-      "machine_shape": "hm",
-      "provenance": []
+      "gpuType": "T4",
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
