Added suggestion to use A100 GPU

--- a/class-7/class-7-DiffusionModel.ipynb
+++ b/class-7/class-7-DiffusionModel.ipynb
@@ -12,12 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "I_gvC5rx43Ws"
       },
       "outputs": [],
       "source": [
+        "# Suggestion is to run with A100 GPU to save time\n",
+        "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -42,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zPSyZOH6CYGE"
       },
@@ -80,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_1IRe6df7lDS"
       },
@@ -141,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "dqbcOIl35Adz"
       },
@@ -173,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "KEY30wEm5gt8"
       },
@@ -192,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "giTDR0uK5mSV"
       },
@@ -206,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "1CfLkdyF-D-v"
       },
@@ -228,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "7mJHK5wq-HmB"
       },
@@ -304,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "c8mV7er3-Uaj"
       },
@@ -352,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "yrxgkQpw-cWO"
       },
@@ -402,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Yey2mA0k-lGT"
       },
@@ -441,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "dnczCApI-m7Z"
       },
@@ -562,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "lZVL8sNq-vca"
       },
@@ -574,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "Na5LGZk6-xjC"
       },
@@ -589,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "ReCSUpm--1Su"
       },
@@ -616,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "5kCmqnJC_v_z"
       },
@@ -627,7 +629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "NqZIsWJm_ydH"
       },
@@ -750,8 +752,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "A100",
       "provenance": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
