Checking file in Colab

--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -6,7 +6,6 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyP5lGIHFtgynOFmgk5FYVh9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,17 +25,8 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vijaygwu/SEAS8525/blob/main/Class_8_CGAN_MINST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nispoe/GWU-SEAS-8525/blob/main/class-8/class-8-CGAN-MINST-30.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "ue7GJVQeSVIZ"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -61,19 +51,18 @@
         "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1).astype('float32')\n",
         "x_train = (x_train - 127.5) / 127.5  # Normalize the images to [-1, 1]\n",
         "y_train = keras.utils.to_categorical(y_train, 10)  # One-hot encode labels\n",
-        "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(60000).batch(256)\n",
-        "\n"
+        "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(60000).batch(256)"
       ],
       "metadata": {
         "id": "YJxvtiifSogu"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**2.Build the Generator, and Distriminator**"
+        "**2. Build the Generator, and Distriminator**"
       ],
       "metadata": {
         "id": "ZsULIWX5Vytq"
@@ -111,20 +100,18 @@
         "        layers.Flatten(),\n",
         "        layers.Dense(1),\n",
         "    ])\n",
-        "    return model\n",
-        "\n",
-        "\n"
+        "    return model"
       ],
       "metadata": {
         "id": "i2NGY9CfT09v"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**3.CGAN model with gradient penalty**"
+        "**3. CGAN model with gradient penalty**"
       ],
       "metadata": {
         "id": "dquX6iurWVJe"
@@ -182,18 +169,18 @@
         "        grads_gen = gen_tape.gradient(g_loss, self.generator.trainable_variables)\n",
         "        self.g_optimizer.apply_gradients(zip(grads_gen, self.generator.trainable_variables))\n",
         "\n",
-        "        return {'d_loss': d_loss, 'g_loss': g_loss}\n"
+        "        return {'d_loss': d_loss, 'g_loss': g_loss}"
       ],
       "metadata": {
         "id": "B174YEXGWVoT"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Compile and Train the Model**"
+        "**4. Compile and Train the Model**"
       ],
       "metadata": {
         "id": "qkbWzfXiUQOF"
@@ -215,8 +202,7 @@
         ")\n",
         "\n",
         "# Train CGAN\n",
-        "cgan.fit(train_dataset, epochs=30)\n",
-        "\n"
+        "cgan.fit(train_dataset, epochs=30)"
       ],
       "metadata": {
         "colab": {
@@ -225,7 +211,7 @@
         "id": "sr3UN2ZTUYRe",
         "outputId": "ea353e00-eb30-471c-abac-40c5bf71f1ce"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,9 +338,7 @@
         "    plt.show()\n",
         "\n",
         "# Make sure to replace `latent_dim=100` and `num_classes=10` with your values if they are different.\n",
-        "display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10)\n",
-        "\n",
-        "\n"
+        "display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10)"
       ],
       "metadata": {
         "colab": {
@@ -364,7 +348,7 @@
         "id": "Ffq1tXb_WreO",
         "outputId": "fcdde483-ce2b-422e-82dc-2053ae495873"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
