--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -51,7 +51,8 @@
         "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1).astype('float32')\n",
         "x_train = (x_train - 127.5) / 127.5  # Normalize the images to [-1, 1]\n",
         "y_train = keras.utils.to_categorical(y_train, 10)  # One-hot encode labels\n",
-        "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(60000).batch(256)"
+        "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(60000).batch(256)\n",
+        "\n"
       ],
       "metadata": {
         "id": "YJxvtiifSogu"
@@ -62,7 +63,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2. Build the Generator, and Distriminator**"
+        "**2.Build the Generator, and Distriminator**"
       ],
       "metadata": {
         "id": "ZsULIWX5Vytq"
@@ -100,7 +101,9 @@
         "        layers.Flatten(),\n",
         "        layers.Dense(1),\n",
         "    ])\n",
-        "    return model"
+        "    return model\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "i2NGY9CfT09v"
@@ -111,7 +114,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**3. CGAN model with gradient penalty**"
+        "**3.CGAN model with gradient penalty**"
       ],
       "metadata": {
         "id": "dquX6iurWVJe"
@@ -169,7 +172,7 @@
         "        grads_gen = gen_tape.gradient(g_loss, self.generator.trainable_variables)\n",
         "        self.g_optimizer.apply_gradients(zip(grads_gen, self.generator.trainable_variables))\n",
         "\n",
-        "        return {'d_loss': d_loss, 'g_loss': g_loss}"
+        "        return {'d_loss': d_loss, 'g_loss': g_loss}\n"
       ],
       "metadata": {
         "id": "B174YEXGWVoT"
@@ -180,7 +183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**4. Compile and Train the Model**"
+        "**Compile and Train the Model**"
       ],
       "metadata": {
         "id": "qkbWzfXiUQOF"
@@ -202,7 +205,8 @@
         ")\n",
         "\n",
         "# Train CGAN\n",
-        "cgan.fit(train_dataset, epochs=30)"
+        "cgan.fit(train_dataset, epochs=30)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -338,7 +342,9 @@
         "    plt.show()\n",
         "\n",
         "# Make sure to replace `latent_dim=100` and `num_classes=10` with your values if they are different.\n",
-        "display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10)"
+        "display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
