update image size

--- a/class-8/class-8-WGAN-GP.ipynb
+++ b/class-8/class-8-WGAN-GP.ipynb
@@ -457,9 +457,9 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(\"generated_img_0_19.png\"))\n",
-        "display(Image(\"generated_img_1_19.png\"))\n",
-        "display(Image(\"generated_img_2_19.png\"))"
+        "display(Image(\"generated_img_0_19.png\", width=256))\n",
+        "display(Image(\"generated_img_1_19.png\", width=256))\n",
+        "display(Image(\"generated_img_2_19.png\", width=256))"
       ]
     }
   ],
