--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -61,7 +61,8 @@
         "# Generator model\n",
         "def build_generator(latent_dim, num_classes=10):\n",
         "    model = keras.Sequential([\n",
-        "        layers.Dense(7*7*256, use_bias=False, input_dim=latent_dim + num_classes),\n",
+        "        layers.Input(shape=(latent_dim + num_classes,)),\n",
+        "        layers.Dense(7*7*256, use_bias=False),\n",
         "        layers.BatchNormalization(),\n",
         "        layers.LeakyReLU(),\n",
         "        layers.Reshape((7, 7, 256)),\n",
@@ -75,10 +76,12 @@
         "    ])\n",
         "    return model\n",
         "\n",
-        "# Discriminator model\n",
+        "\n",
+        "# Discriminator model with Input layer\n",
         "def build_discriminator(image_shape):\n",
         "    model = keras.Sequential([\n",
-        "        layers.Conv2D(64, kernel_size=5, strides=2, padding='same', input_shape=image_shape),\n",
+        "        layers.Input(shape=image_shape),  # Explicit Input layer\n",
+        "        layers.Conv2D(64, kernel_size=5, strides=2, padding='same'),\n",
         "        layers.LeakyReLU(),\n",
         "        layers.Dropout(0.3),\n",
         "        layers.Conv2D(128, kernel_size=5, strides=2, padding='same'),\n",
