fix float64 float32 error

--- a/class-8/class-8-CGAN-MINST-10000.ipynb
+++ b/class-8/class-8-CGAN-MINST-10000.ipynb
@@ -131,7 +131,8 @@
         "\n",
         "        # Generate fake images\n",
         "        noise = tf.random.normal(shape=(batch_size, self.latent_dim))\n",
-        "        random_latent_vectors = tf.concat([noise, labels], axis=1)\n",
+        "        # Ensure labels are float32 for concatenation\n",
+        "        random_latent_vectors = tf.concat([noise, tf.cast(labels, tf.float32)], axis=1)\n",
         "        generated_images = self.generator(random_latent_vectors, training=True)\n",
         "\n",
         "        with tf.GradientTape() as disc_tape:\n",
@@ -145,7 +146,8 @@
         "        self.d_optimizer.apply_gradients(zip(grads_disc, self.discriminator.trainable_variables))\n",
         "\n",
         "        noise = tf.random.normal(shape=(batch_size, self.latent_dim))\n",
-        "        random_latent_vectors = tf.concat([noise, labels], axis=1)\n",
+        "        # Ensure labels are float32 for concatenation again\n",
+        "        random_latent_vectors = tf.concat([noise, tf.cast(labels, tf.float32)], axis=1)\n",
         "\n",
         "        with tf.GradientTape() as gen_tape:\n",
         "            generated_images = self.generator(random_latent_vectors, training=True)\n",
