made some updates

--- a/class-7/class-7-DiffusionModel.ipynb
+++ b/class-7/class-7-DiffusionModel.ipynb
@@ -3,11 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/nispoe/GWU-SEAS-8525/blob/main/class-7/class-7-DiffusionModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Suggestion is to run with A100 GPU to save time"
       ]
     },
     {
@@ -18,8 +25,6 @@
       },
       "outputs": [],
       "source": [
-        "# Suggestion is to run with A100 GPU to save time\n",
-        "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -114,7 +119,6 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.preprocessing import image_dataset_from_directory\n",
         "\n",
-        "# Assuming you have downloaded and extracted the flowers dataset to a local directory\n",
         "dataset_url = \"https://storage.googleapis.com/download.tensorflow.org/example_images/flower_photos.tgz\"\n",
         "data_dir = tf.keras.utils.get_file('flower_photos', origin=dataset_url, untar=True)"
       ]
@@ -133,7 +137,7 @@
         "    subset=\"training\",\n",
         "    seed=42,\n",
         "    image_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
-        "    batch_size=None, # Adjust batch_size according to your needs\n",
+        "    batch_size=None,\n",
         "    labels=None,\n",
         "    shuffle=True,\n",
         "    interpolation=\"bilinear\",\n",
@@ -149,7 +153,6 @@
       },
       "outputs": [],
       "source": [
-        "# Preprocess the data\n",
         "def preprocess(img):\n",
         "    img = tf.cast(img, \"float32\") / 255.0\n",
         "    return img\n",
@@ -168,7 +171,6 @@
       },
       "outputs": [],
       "source": [
-        "# Show some items of clothing from the training set\n",
         "train_sample = sample_batch(train)\n",
         "display(train_sample)"
       ]
@@ -312,7 +314,7 @@
       },
       "outputs": [],
       "source": [
-        "@keras.saving.register_keras_serializable() # Register the function for serialization\n",
+        "@keras.saving.register_keras_serializable()\n",
         "def sinusoidal_embedding(x):\n",
         "    frequencies = tf.exp(\n",
         "        tf.linspace(\n",
@@ -410,8 +412,6 @@
       },
       "outputs": [],
       "source": [
-        "# Build the U-Net\n",
-        "\n",
         "noisy_images = layers.Input(shape=(IMAGE_SIZE, IMAGE_SIZE, 3))\n",
         "x = layers.Conv2D(32, kernel_size=1)(noisy_images)\n",
         "\n",
@@ -524,7 +524,6 @@
         "        noisy_images = signal_rates * images + noise_rates * noises\n",
         "\n",
         "        with tf.GradientTape() as tape:\n",
-        "            # train the network to separate noisy images to their components\n",
         "            pred_noises, pred_images = self.denoise(\n",
         "                noisy_images, noise_rates, signal_rates, training=True\n",
         "            )\n",
@@ -583,7 +582,6 @@
       "outputs": [],
       "source": [
         "if LOAD_MODEL:\n",
-        "    # ddm.built = True\n",
         "    dummy_input = tf.zeros((1, 28, 28, 1))\n",
         "    ddm(dummy_input)\n",
         "    ddm.load_weights(\"/content/checkpoint/checkpoint.ckpt\")"
@@ -646,7 +644,6 @@
       },
       "outputs": [],
       "source": [
-        "# run training and plot generated images periodically\n",
         "model_checkpoint_callback = callbacks.ModelCheckpoint(\n",
         "    filepath=\"./checkpoint/checkpoint.weights.h5\",\n",
         "    save_weights_only=True,\n",
@@ -655,7 +652,6 @@
         ")\n",
         "\n",
         "tensorboard_callback = callbacks.TensorBoard(log_dir=\"./logs\")\n",
-        "\n",
         "\n",
         "class ImageGenerator(callbacks.Callback):\n",
         "    def __init__(self, num_img):\n",
@@ -674,7 +670,7 @@
         "\n",
         "image_generator_callback = ImageGenerator(num_img=10)\n",
         "\n",
-        "ddm.build(input_shape=(None, 28, 28, 1))  # Change shape to match your data\n",
+        "ddm.build(input_shape=(None, 28, 28, 1))\n",
         "\n",
         "ddm.fit(\n",
         "    train,\n",
@@ -695,7 +691,6 @@
       },
       "outputs": [],
       "source": [
-        "# Generate some novel images of flowers\n",
         "generated_images = ddm.generate(num_images=10, diffusion_steps=20).numpy()\n",
         "display(generated_images)"
       ]
@@ -708,7 +703,6 @@
       },
       "outputs": [],
       "source": [
-        "# View improvement over greater number of diffusion steps\n",
         "for diffusion_steps in list(np.arange(1, 6, 1)) + [20] + [100]:\n",
         "    tf.random.set_seed(42)\n",
         "    generated_images = ddm.generate(\n",
@@ -726,22 +720,16 @@
       },
       "outputs": [],
       "source": [
-        "# Interpolation between two points in the latent space\n",
-        "\n",
         "def spherical_interpolation(a, b, t):\n",
-        "    # Cast t to tf.float32 to match the expected type of a and b\n",
         "    t = tf.cast(t, tf.float32)\n",
-        "    # Use tf.math functions to ensure operations remain in TensorFlow\n",
         "    return tf.math.sin(t * math.pi / 2) * a + tf.math.cos(t * math.pi / 2) * b\n",
         "\n",
         "for i in range(5):\n",
         "    a = tf.random.normal(shape=(IMAGE_SIZE, IMAGE_SIZE, 3), dtype=tf.float32) # Explicitly set dtype to tf.float32\n",
         "    b = tf.random.normal(shape=(IMAGE_SIZE, IMAGE_SIZE, 3), dtype=tf.float32) # Explicitly set dtype to tf.float32\n",
-        "    # initial_noise should be a TensorFlow tensor\n",
         "    initial_noise = tf.convert_to_tensor(\n",
         "        [spherical_interpolation(a, b, t) for t in np.arange(0, 1.1, 0.1)]\n",
         "    )\n",
-        "    # Cast initial_noise to float32 before passing to generate function\n",
         "    generated_images = ddm.generate(\n",
         "        num_images=2, diffusion_steps=20, initial_noise=tf.cast(initial_noise, tf.float32)\n",
         "    ).numpy()\n",
@@ -753,9 +741,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "A100",
-      "provenance": [],
+      "include_colab_link": true,
       "machine_shape": "hm",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
