--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -33,11 +33,10 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "# Load and preprocess the MNIST dataset\n",
         "(x_train, y_train), (_, _) = keras.datasets.mnist.load_data()\n",
         "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1).astype('float32')\n",
-        "x_train = (x_train - 127.5) / 127.5  # Normalize the images to [-1, 1]\n",
-        "y_train = keras.utils.to_categorical(y_train, 10)  # One-hot encode labels\n",
+        "x_train = (x_train - 127.5) / 127.5\n",
+        "y_train = keras.utils.to_categorical(y_train, 10)\n",
         "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).shuffle(60000).batch(256)"
       ]
     },
@@ -58,7 +57,6 @@
       },
       "outputs": [],
       "source": [
-        "# Generator model\n",
         "def build_generator(latent_dim, num_classes=10):\n",
         "    model = keras.Sequential([\n",
         "        layers.Input(shape=(latent_dim + num_classes,)),\n",
@@ -76,8 +74,6 @@
         "    ])\n",
         "    return model\n",
         "\n",
-        "\n",
-        "# Discriminator model with Input layer\n",
         "def build_discriminator(image_shape):\n",
         "    model = keras.Sequential([\n",
         "        layers.Input(shape=image_shape),  # Explicit Input layer\n",
@@ -110,7 +106,6 @@
       },
       "outputs": [],
       "source": [
-        "# CGAN model with gradient penalty\n",
         "class CGAN(keras.Model):\n",
         "    def __init__(self, discriminator, generator, latent_dim, num_classes):\n",
         "        super(CGAN, self).__init__()\n",
@@ -129,9 +124,7 @@
         "        real_images, labels = data\n",
         "        batch_size = tf.shape(real_images)[0]\n",
         "\n",
-        "        # Generate fake images\n",
         "        noise = tf.random.normal(shape=(batch_size, self.latent_dim))\n",
-        "        # Cast labels to float32 to match the data type of noise\n",
         "        labels = tf.cast(labels, tf.float32)\n",
         "        random_latent_vectors = tf.concat([noise, labels], axis=1)\n",
         "        generated_images = self.generator(random_latent_vectors, training=True)\n",
@@ -147,7 +140,6 @@
         "        self.d_optimizer.apply_gradients(zip(grads_disc, self.discriminator.trainable_variables))\n",
         "\n",
         "        noise = tf.random.normal(shape=(batch_size, self.latent_dim))\n",
-        "        # Cast labels to float32 to match the data type of noise\n",
         "        labels = tf.cast(labels, tf.float32)\n",
         "        random_latent_vectors = tf.concat([noise, labels], axis=1)\n",
         "\n",
@@ -159,7 +151,7 @@
         "        grads_gen = gen_tape.gradient(g_loss, self.generator.trainable_variables)\n",
         "        self.g_optimizer.apply_gradients(zip(grads_gen, self.generator.trainable_variables))\n",
         "\n",
-        "        return {'d_loss': d_loss, 'g_loss': g_loss}\n"
+        "        return {'d_loss': d_loss, 'g_loss': g_loss}"
       ]
     },
     {
@@ -195,7 +187,6 @@
         "    loss_fn=keras.losses.BinaryCrossentropy(from_logits=True),\n",
         ")\n",
         "\n",
-        "# Train CGAN\n",
         "cgan.fit(train_dataset, epochs=30)"
       ]
     },
@@ -213,22 +204,16 @@
       "outputs": [],
       "source": [
         "def display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10):\n",
-        "    plt.figure(figsize=(20, 4))  # Adjust the figure size if necessary\n",
+        "    plt.figure(figsize=(20, 4))\n",
         "    for digit in range(num_classes):\n",
-        "        # Generate noise\n",
         "        noise = tf.random.normal([num_examples, latent_dim])\n",
-        "        # One-hot encode digit labels\n",
         "        digit_labels = tf.one_hot([digit] * num_examples, depth=num_classes)\n",
-        "        # Concatenate noise and digit labels\n",
         "        generator_input = tf.concat([noise, digit_labels], axis=1)\n",
         "\n",
-        "        # Generate images\n",
         "        generated_images = generator(generator_input, training=False)\n",
         "\n",
-        "        # Check if generated_images tensor needs to be converted from logits\n",
         "        generated_images = tf.sigmoid(generated_images).numpy()\n",
         "\n",
-        "        # Normalize the images to [0, 1] and convert to 'uint8'\n",
         "        generated_images = np.clip(generated_images * 255, 0, 255).astype('uint8')\n",
         "\n",
         "        for i in range(num_examples):\n",
@@ -236,10 +221,9 @@
         "            plt.imshow(generated_images[i, :, :, 0], cmap='gray')\n",
         "            plt.axis('off')\n",
         "\n",
-        "    plt.tight_layout()  # Adjust subplot parameters to give specified padding\n",
+        "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "# Make sure to replace `latent_dim=100` and `num_classes=10` with your values if they are different.\n",
         "display_generated_images(generator, num_examples=10, latent_dim=100, num_classes=10)"
       ]
     }
