--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -46,7 +46,7 @@
         "id": "ZsULIWX5Vytq"
       },
       "source": [
-        "**2. Build the Generator, and Distriminator**"
+        "**2. Build the Generator and Discriminator**"
       ]
     },
     {
@@ -95,7 +95,7 @@
         "id": "dquX6iurWVJe"
       },
       "source": [
-        "**3. CGAN model with gradient penalty**"
+        "**3. cGAN model with gradient penalty**"
       ]
     },
     {
@@ -160,7 +160,7 @@
         "id": "qkbWzfXiUQOF"
       },
       "source": [
-        "**4. Compile and Train the Model**"
+        "**4. Compile and train the Model**"
       ]
     },
     {
@@ -188,6 +188,13 @@
         ")\n",
         "\n",
         "cgan.fit(train_dataset, epochs=30)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**5. Display generated images**"
       ]
     },
     {
