--- a/class-8/class-8-CGAN-MINST-30.ipynb
+++ b/class-8/class-8-CGAN-MINST-30.ipynb
@@ -160,7 +160,7 @@
         "id": "qkbWzfXiUQOF"
       },
       "source": [
-        "**4. Compile and train the Model**"
+        "**4. Compile and train the model**"
       ]
     },
     {
